--- a/fitness/template/fitness.html
+++ b/fitness/template/fitness.html
@@ -9,7 +9,7 @@
 
 <!-- Use the header area for the website name or logo -->
     <header>
-      <a href="index.html">Forward Fitness Club</a>
+      <a href="index.html"><img src="C:\HL\fitness\images\hinhanh"alt="Forward Fitness Club logo"height="300"width="900"></a>
     </header>
 
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
