--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -6,10 +6,15 @@ body
 background-color  : #FFFF99;
 }
 
+/*Style to create fluid image*/
+img{
+  max-width: 100%;
+}
+/*Style for Mobile Layout*/
 /*Style for container centers the page and sets the element width */
 #container
 {
-  width         : 80%;
+  width         : 100%;
   margin-left   : auto;
   margin-right  : auto;
 }
@@ -18,11 +23,9 @@ background-color  : #FFFF99;
 
 header
 {
-  margin-top          : 10px;
-  margin-bottom       : 20px;
+  margin-top          : 0.2em;
   background-color    : #fff8cf;
-  border-radius       : 10px;
-  box-shadow          : 12px 12px 12px #404040;
+  border-radius       : 0.5em;
   text-align          : center;
 }
 
@@ -33,26 +36,41 @@ nav
   font-size           : 1.25em;
   font-weight         : bold;
   text-align          : center;
-  padding             : 15px;
-  margin-top          : 10px;
-  margin-bottom       : 10px;
-  border-radius       : 20px;
-  border-top          : 5px solid #FFFFFF;
-  border-bottom       : 5px solid #FFFFFF;
 }
-
+nav ul {
+  padding             :0;
+  margin-top          :0.5em;
+  margin-bottom       :0.5em;
+}
+nav li{
+  background-color          :#008000;
+  border-radius:            :2em;
+  list-style-type           :none;
+  margin                    :0.3em;
+  padding                   :0.4em;
+}
 /* Style for main specifies a block display, text properties, margins, padding, rounded border, and shadow */
+nav li a{
+  color                 :#FFFFFF;
+  text-decoration       :none;
+}
+.mobile{
+  display: inline;
+}
+.desktop{
+  display: none;
+}
 main
 {
   display             : block;
   font-family         : Verdana, Arial, sans-serif;
   font-size           : 1em;
-  margin-top          : 20px;
-  margin-bottom       : 10px;
-  padding             : 20px;
-  border-raidus       : 10px;
+  margin-top          : 0.5em;
+  padding             : 1em;
+  border-rsaidus      : 1em;
   background-color    : #FFFFFF;
-  box-shadow          : 12px 12px 12px #404040;
+  border-top          :solid 0.2em #009933;
+  border-bottom:      :solid 0.2em #009933;
 }
 
 /* Style for footer specifies font size, text alignment, and top margin */
@@ -63,23 +81,11 @@ footer
   margin-top    : 20px;
 }
 
+.tablet{
+  display:none;
+}
+/* Style rule specifies to not display the equip class*/
 .equip
 {
-  float           : left;
-  padding-right   : 20px;
-}
-
-ul
-{
-  margin-bottom         : 50px;
-  list-style-position   : inside;
-}
-dt
-{
-  font-weight        : bold;
-}
-
-dd
-{
-  padding-bottom     : 20px;
+  display: none;
 }
